--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+
+
 @import url(http://fonts.googleapis.com/css?family=Righteous|Marvel);
 html { 
-  background: url("http://upload.wikimedia.org/wikipedia/commons/0/03/Antennae_Galaxies_composite_of_ALMA_and_Hubble_observations.jpg") no-repeat center center fixed; 
+  background: url("http://i.dailymail.co.uk/i/pix/2014/11/07/1415370837687_wps_33_Pictured_Jokulsarlon_Lago.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -24,9 +26,14 @@ html {
   transform:scale(1.2);
   color:#909090;
   text-shadow:2px 2px black;
+  -webkit-filter: blur(5px);
 }
+
 li{
+  display: inline-block;
+  border-style:solid;
   list-style-position:inside;
+  list-style-type: none;
 }
 
 #sub_heading {
@@ -65,9 +72,16 @@ li{
   transform:scale(1.2);
 }
 .nav_item{
+  display:inline-block;
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
   text-align: center;
+}
+.hide{
+  display: none;
+}
+.hide:hover{
+  display:visible;
 }
 .nav_item:hover{
   -webkit-transform:scale(1.2);
