--- a/styles.css
+++ b/styles.css
@@ -59,19 +59,19 @@ table {
   border-collapse:  collapse;
   border-spacing:  0;
 }
+
 html { 
   background:  url("http://i.imgur.com/tsB2T9P.jpg") no-repeat center center fixed; 
-  -webkit-background-size:  cover;
-  -moz-background-size:  cover;
-  -o-background-size:  cover;
-  background-size:  cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-attachment:  fixed;
 }
 body{
   padding:50px;
 }
 #title{
-  magin:  100px 50px 150px 50px;
   padding-bottom: 150px;
   font-size : 200px;
   text-align :  center;
@@ -226,3 +226,80 @@ span {
   text-align: center;
   opacity: 0.6;
 }
+
+    /* MOBILE ONLY */
+    @media only screen and (max-width: 480px){
+      html { 
+        background:  url("http://i.imgur.com/tsB2T9P.jpg") no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-attachment:  fixed;
+      }
+      #title{
+        padding-bottom: 15px;
+        font-size : 40px;
+        text-align : left;
+        font-family: 'Righteous', cursive;
+        color: black; 
+        opacity: 0.3;
+        -webkit-transition: all 0.7s ease;
+        transition: all 0.7s ease;
+        text-shadow: 2px 2px;
+      }
+      #sub_heading {
+        color: white;
+        padding-bottom:  50px;
+        text-align : center;
+        font-family:  'Marvel', sans-serif;
+        opacity:  0.8;
+        font-size :  25px;
+        -webkit-transition:  all 0.7s ease;
+        transition:  all 0.7s ease;
+      }
+      body{
+        max-width: 80%;
+      }
+      #main_nav > li{
+        vertical-align:  text-top;
+        padding-left:  10px;
+        padding-bottom: 20px;
+        display:  inline-block;
+        list-style-position: inside;
+        list-style-type:  none;
+      }
+      .hide{
+        display:inline;
+      }
+      div.clearfix .side_title{
+        float:none;
+        width:10%;
+      }
+    }
+    
+    /* TABLET ONLY */
+    @media only screen and (min-width: 481px) and (max-width: 768px){
+      html { 
+        background:  url("http://i.imgur.com/tsB2T9P.jpg") no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-attachment:  fixed;
+      }
+      body{
+        max-width: 80%;
+      }
+      #main_nav > li{
+        vertical-align:  text-top;
+        padding-left:  10px;
+        padding-bottom: 20px;
+        display:  inline-block;
+        list-style-position: inside;
+        list-style-type:  none;
+      }
+      .hide{
+        display: inline-block;
+      }
+    }
